比較頁>基本資料 ETF產品的配息頻率欄位 顯示與ETF詳細頁不同

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
@@ -1914,7 +1914,7 @@
                                         d.lable = data.lables.find((item) => item.id == key);
                                         if (params.etf.includes(key)) {
                                             d.currency = d.CurrencyName || '-';
-                                            d.dividendFrequency = d.DividendFrequency || '-';
+                                            d.dividendFrequency = d.DividendDistributionFrequency || '-';
                                             d.dateOfEstablishment = d.EstablishmentDate || '-';
                                             d.type = d.ProductType || '-';
                                             d.scale = d.ScaleMillions ? (formatNumberWithCommas(d.ScaleMillions / 100) + ' ' + d.QuoteCurrency) : '-';
