--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -194,7 +194,29 @@
         </div>
     </div>
 </div>
-
+<div id="popupToolsMax" class="c-modal c-modal--sm mfp-hide">
+    <div class="c-modal__wrap">
+        <header class="c-modal__header">
+            <h2 class="c-modal__title">加入失敗</h2>
+        </header>
+        <div class="c-modal__content">
+            <div class="c-modalResult">
+                <div class="c-modalResult__icon">
+                    <img src="~/themes/images/icons/orange/x-solid.svg" class="c-modalResult__img" alt="">
+                </div>
+                <div class="c-modalResult__title">加入常用已達上限</div>
+                <p class="c-modalResult__msg">您一次最多可添加7個加入常用</p>
+            </div>
+        </div>
+        <div class="c-modal__action">
+            <div class="l-action l-action--inline">
+                <div class="l-action__item">
+                    <a href="#" class="o-btn o-btn--primary o-btn--sm" data-popup-close="true">確定</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div id="popupAlert" class="c-modal c-modal--sm mfp-hide">
     <div class="c-modal__wrap">
         <header class="c-modal__header">
