Update : 修正瀏覽人次排序問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -402,7 +402,7 @@
                                 </td>
                                 <td class="c-cardTable__body" data-card-table-width="1/2">
                                     <div class="c-cardTable__content">
-                                        <div class="o-views o-views@lt"><%= NewsViewCount %></div>
+                                        <div class="o-views o-views@lt"><%= DisplayNewsViewCount %></div>
                                     </div>
                                 </td>
                                 <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
