Update：ETF 優惠標籤改 span tag

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -34,7 +34,7 @@
                                         @foreach (var tag in Model.DiscountTags)
                                         {
                                             <li class="l-tag__item">
-                                                <a href="#" class="o-tag">@tag</a>
+                                                <span class="o-tag">@tag</span>
                                             </li>
                                         }
                                     </ul>
