--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
@@ -19,7 +19,8 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                @*<a href="#" class="o-tag"><%= DiscountTags[i] %></a>*@
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -279,7 +280,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -374,7 +375,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -469,7 +470,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -565,7 +566,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -662,7 +663,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -742,7 +743,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -822,7 +823,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -897,7 +898,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
